# natural-language-geocoding

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.in  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: pypi-publish.yml  python-test.yml  snyk-scan.yml  testpypi-publish.yml
docs/: sources.md
scripts/: build.sh  ingest_composed_places.sh  ingest_ne_places.sh  ingest_wof_places.sh  lint.sh  recreate_venv.sh  refresh_requirements.sh  run_demo.sh  run_evaluator.sh  test.sh
src/natural_language_geocoding/: __init__.py  errors.py  main.py  models.py  natural_earth.py  nominatim.py  place_lookup.py  prompt.md  prompt.py  splitter.py
src/natural_language_geocoding/eval/: __init__.py  eval_scratch.py  evaluation_analysis.py  evaluation_core.py  evaluator.py  tree_distance.py
src/natural_language_geocoding/eval/templates/: full_eval_result.md  single_eval_diff_result.md  single_eval_success_result.md
src/natural_language_geocoding/geocode_db/: __init__.py  download_whos_on_first.py  geocode_db.py  geocode_db.sql  ingest_whos_on_first.py
src/natural_language_geocoding/geocode_index/: __init__.py  geocode_index_place_lookup.py  geoplace.py  hierachical_place_cache.py  index.py  opensearch_utils.py  whos_on_first.py
src/natural_language_geocoding/geocode_index/ingesters/: __init__.py  composed_places.py  hierarchy_finder.py  ingest_utils.py  natural_earth.py  whos_on_first.py
src/natural_language_geocoding/geocode_index/ingesters/composed_places/: __init__.py  composers_core.py  iberian_peninsula.py  ingest.py
src/natural_language_geocoding/tests/: __init__.py  canned_place_lookup.py  states_to_geom.yaml
src/natural_language_geocoding_demo/: __init__.py  app.py
tests/: test_models.py
tests/natural_language_geocoding_tests/: canned_place_lookup.py  conftest.py  states_to_geom.json  test_natural_language_geocoding.py  test_parsing_with_different_llms.py
tests/natural_language_geocoding_tests/eval/: test_tree_distance.py
tests/natural_language_geocoding_tests/geocode_index/: in_memory_geocode_index.py  test_geoplace.py  test_hierarchical_place_cache.py
tests/natural_language_geocoding_tests/geocode_index/ingesters/: test_hierarchy_finder.py  test_natural_earth.py  test_remove_duplicate_points.py
