[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[project]
name = "natural-language-geocoding"
authors = [{ name = "Jason Gilman", email = "jason@element84.com" }]
maintainers = [{ name = "Jason Gilman", email = "jason@element84.com" }]
description = "Natural Language Geocoding implements an AI technique to convert natural language descriptions of spatial areas into polygons."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "e84-geoai-common>=0.0.1",
  "requests>=2.32.3"
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.urls]
Github = "https://github.com/Element84/natural-language-geocoding"

[project.scripts]
natural-language-geocoding = "natural_language_geocoding.main:main"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths=[
  "tests"
]

[project.optional-dependencies]
demo = [
  "streamlit>=1.38.0",
  "streamlit-folium>=0.22.1"
]
dev = [
  "pytest>=8.3.3",
  "ipykernel>=6.29.5",
  "black>=24.8.0",
  "pyright>=1.1.381",
  "build>=1.2.2",
  "pre-commit>=3.8.0",
  "pre-commit-hooks>=4.6.0"
]
